--- a/package.json
+++ b/package.json
@@ -12,8 +12,13 @@
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "2.21.2",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
+    "mongodb": "^3.6.2",
+    "reflect-metadata": "^0.1.13",
     "ts-node-dev": "^1.0.0-pre.63",
-    "typescript": "^4.0.3"
+    "typeorm": "^0.2.28",
+    "typescript": "^4.0.3",
+    "uuidv4": "^6.2.4"
   },
   "devDependencies": {
     "eslint-import-resolver-typescript": "^2.3.0"
