--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/express": "^4.17.8",
     "@typescript-eslint/eslint-plugin": "^4.4.0",
     "@typescript-eslint/parser": "^4.4.0",
+    "cors": "^2.8.5",
     "eslint": "7.2.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "2.21.2",
@@ -15,12 +16,15 @@
     "express-async-errors": "^3.1.1",
     "mongodb": "^3.6.2",
     "reflect-metadata": "^0.1.13",
+    "socket.io": "^2.3.0",
     "ts-node-dev": "^1.0.0-pre.63",
     "typeorm": "^0.2.28",
     "typescript": "^4.0.3",
     "uuidv4": "^6.2.4"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.8",
+    "@types/socket.io": "^2.1.11",
     "eslint-import-resolver-typescript": "^2.3.0"
   }
 }
